[package]
name = "remote"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.10"
parking_lot = "0.12.1"
tokio = { version = "1.34.0", features = ["full"] }
webrtc = "0.9.0"
clap = { version = "4.4.8", features = ["derive"] }
once_cell = { version = "1.18.0", features = ["parking_lot"] }
derive_more = "0.99.17"
serde_json = "1.0.108"
serde = { version = "1.0", features = ["derive"] }
uuid = {version = "1.6.1", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde",
] }
tokio-tungstenite = "*"
futures = "*"
log = "0.4.20"
fern = "0.6.2"
humantime = "2.1.0"
