[package]
name = "remote"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.10"
parking_lot = "0.12.1"
tokio = { version = "1.34.0", features = ["full"] }
clap = { version = "4.4.8", features = ["derive"] }
once_cell = { version = "1.18.0", features = ["parking_lot"] }
derive_more = "0.99.17"
serde_json = "1.0.108"
serde = { version = "1.0", features = ["derive"] }
uuid = {version = "1.6.1", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde",
] }
tokio-tungstenite = "*"
futures = "*"
log = "0.4.20"
fern = "0.6.2"
humantime = "2.1.0"
async-trait = "0.1.74"
bytes = "1.5.0"
rodio = "0.17.3"
bincode = "1.3.3"
console-subscriber = "0.2.0"
dotenv = "0.15.0"
thiserror = "1.0"
telemetry = { path = "telemetry" }
rtc = { path = "rtc" }
openh264 = "0.4.4"

[dependencies.windows]
version = "0.52.0"
features = [
    "implement",
    "Foundation",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Memory",
    "Win32_Graphics_Gdi", 
    "Win32_System_Com_StructuredStorage",
    "Win32_System_SystemServices",
    "Win32_UI_Shell_Common",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Security",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Media_MediaFoundation",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_System_Performance"
]

[profile.release]
panic = "abort"
debug = true



[profile.dev]
panic = "abort"
