[package]
name = "media"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.34.0", features = ["full"] }
eyre = "0.6.10"
derive_more = "0.99.17"
log = "0.4.20"
scopeguard = "1.2.0"
telemetry = { path = "../telemetry" }
serde = { version = "1.0", features = ["derive"] }
openh264 = "0.5"

[dependencies.windows]
version = "0.52.0"
features = [
    "implement",
    "Foundation",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Memory",
    "Win32_Graphics_Gdi",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_SystemServices",
    "Win32_UI_Shell_Common",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Security",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Media_MediaFoundation",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_System_Performance",
]
