[package]
name = "signal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = "*"
futures = "*"
log = "0.4.20"
serde = { version = "1.0", features = ["derive"] }
eyre = "0.6.10"
tokio = { version = "1.34.0", features = ["full"] }
clap = { version = "4.4.8", features = ["derive"] }
uuid = { version = "1.6.1", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde",
] }
serde_json = "1.0.108"
