[package]
name = "telemetry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.9"
tokio = { version = "1.34.0", features = ["full"] }
log = "*"
once_cell = { version = "1.18.0", features = ["parking_lot"] }
bincode = "1.3.3"
async-bincode = "0.7.2"
futures = "*"
serde = { version = "1.0", features = ["derive"] }

workspace = { members = "dash" }
